fix(table): fix sort dropdown overflow issues
affects: @synerise/ds-table

--- a/packages/components/table/src/style/table.less
+++ b/packages/components/table/src/style/table.less
@@ -66,6 +66,13 @@
     }
   }
 
+  th.ant-table-cell-ellipsis.ant-table-column-has-sorters {
+    overflow: visible;
+  }
+  th.ant-table-cell-ellipsis.ant-table-column-has-sorters > [class^='ant-table-column-sorters'] {
+    overflow: hidden;
+  }
+
   .virtual-table {
     colgroup {
       height: 0;
